RH-2515 #comment fix attention flag z-index.

--- a/grails-app/assets/stylesheets/sass/partials/_task.scss
+++ b/grails-app/assets/stylesheets/sass/partials/_task.scss
@@ -555,7 +555,11 @@
         width: 45px;
         height: 45px;
         background: image-url('patients/attention.png', false, false) no-repeat center right !important;
-        z-index: 110;
+        z-index: 20;
+    }
+
+    .ui-front {
+        z-index: 10;
     }
 
     .title {
